lutra-sql/src/main/java/io/lutra/antlr4/DmlLangRuleParser.java
// Generated from C:/workspace/lutradb/lutra-sql/src/main/resources/antlr4\DmlLangRule.g4 by ANTLR 4.8
package io.lutra.antlr4;
import io.lutra.visitor.dml.DmlLangRuleVisitor;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DmlLangRuleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, ADD=3, ALL=4, ALTER=5, ALWAYS=6, ANALYZE=7, AND=8, ANY=9, 
		AS=10, ASC=11, AUTO_INCREMENT=12, BEFORE=13, BETWEEN=14, BOTH=15, BTREE=16, 
		BY=17, CALL=18, CASCADE=19, CASE=20, CAST=21, CHANGE=22, CHARACTER=23, 
		CHECK=24, COLLATE=25, COLUMN=26, CONDITION=27, CONSTRAINT=28, CONTINUE=29, 
		CONVERT=30, CREATE=31, CROSS=32, CURRENT_USER=33, CURSOR=34, DATABASE=35, 
		DATABASES=36, DECLARE=37, DEFAULT=38, DELAYED=39, DELETE=40, DESC=41, 
		DESCRIBE=42, DETERMINISTIC=43, DISTINCT=44, DISTINCTROW=45, DROP=46, EACH=47, 
		ELSE=48, ELSEIF=49, ENCLOSED=50, ESCAPED=51, EXISTS=52, EXIT=53, EXPLAIN=54, 
		FALSE=55, FETCH=56, FOR=57, FORCE=58, FOREIGN=59, FROM=60, FULLTEXT=61, 
		GENERATED=62, GRANT=63, GROUP=64, HAVING=65, HIGH_PRIORITY=66, IF=67, 
		IGNORE=68, IN=69, INDEX=70, INFILE=71, INNER=72, INOUT=73, INSERT=74, 
		INTERVAL=75, INTO=76, IS=77, ITERATE=78, JOIN=79, KEY=80, KEYS=81, KILL=82, 
		LEADING=83, LEAVE=84, LEFT=85, LIKE=86, LIMIT=87, LINEAR=88, LINES=89, 
		LOAD=90, LOCK=91, LOOP=92, LOW_PRIORITY=93, MASTER_BIND=94, MASTER_SSL_VERIFY_SERVER_CERT=95, 
		MATCH=96, MAXVALUE=97, MODIFIES=98, NATURAL=99, NOT=100, NULL=101, ON=102, 
		OPTIMIZE=103, OPTION=104, OPTIONALLY=105, OR=106, ORDER=107, OUT=108, 
		OUTER=109, OUTFILE=110, PARTITION=111, PRIMARY=112, PROCEDURE=113, PURGE=114, 
		RANGE=115, READ=116, READS=117, REFERENCES=118, REGEXP=119, RELEASE=120, 
		RENAME=121, REPEAT=122, REPLACE=123, REQUIRE=124, RESTRICT=125, RETURN=126, 
		REVOKE=127, RIGHT=128, RLIKE=129, SCHEMA=130, SCHEMAS=131, SELECT=132, 
		SET=133, SEPARATOR=134, SHOW=135, SPATIAL=136, SQL=137, TABLE=138, TERMINATED=139, 
		THEN=140, TO=141, TRAILING=142, TRIGGER=143, TRUE=144, TRUNCATE=145, UNDO=146, 
		UNION=147, UNIQUE=148, UNLOCK=149, UNSIGNED=150, UPDATE=151, USAGE=152, 
		USE=153, USING=154, VALUES=155, WHEN=156, WHERE=157, WHILE=158, WITH=159, 
		WRITE=160, XOR=161, ZEROFILL=162, MAX=163, MIN=164, COUNT=165, SUM=166, 
		AVG=167, PERCENT=168, UNDER_LINE=169, TINYINT=170, SMALLINT=171, MEDIUMINT=172, 
		INT=173, INTEGER=174, BIGINT=175, REAL=176, DOUBLE=177, PRECISION=178, 
		FLOAT=179, DECIMAL=180, DEC=181, NUMERIC=182, DATE=183, TIME=184, TIMESTAMP=185, 
		DATETIME=186, YEAR=187, CHAR=188, VARCHAR=189, NVARCHAR=190, NATIONAL=191, 
		BINARY=192, VARBINARY=193, TINYBLOB=194, BLOB=195, MEDIUMBLOB=196, LONGBLOB=197, 
		TINYTEXT=198, TEXT=199, MEDIUMTEXT=200, LONGTEXT=201, ENUM=202, VARYING=203, 
		SERIAL=204, EQUAL=205, GREATER=206, LESS=207, NEQ=208, GREATER_EQUAL=209, 
		LESS_EQUAL=210, COMMA=211, S_QUOTE=212, R_QUOTE=213, F_STOP=214, L_BRACKET=215, 
		R_BRACKET=216, START=217, NUMBER=218, ID=219, WS=220;
	public static final int
		RULE_root = 0, RULE_dmlStatement = 1, RULE_number = 2, RULE_selectStatement = 3, 
		RULE_functionExpr = 4, RULE_functions = 5, RULE_maxFunc = 6, RULE_minFunc = 7, 
		RULE_sumFunc = 8, RULE_avgFunc = 9, RULE_countFunc = 10, RULE_countFuncExpr = 11, 
		RULE_distinctExpr = 12, RULE_conditionExpr = 13, RULE_tableExpr = 14, 
		RULE_tableMultp = 15, RULE_subQuery = 16, RULE_tableAlias = 17, RULE_filterCondition = 18, 
		RULE_logicOp = 19, RULE_compareExpr = 20, RULE_indistinctClause = 21, 
		RULE_valueClause = 22, RULE_rangeExpr = 23, RULE_opExpr = 24, RULE_allClause = 25, 
		RULE_anyClause = 26, RULE_existsClause = 27, RULE_notExistsClause = 28, 
		RULE_whereClause = 29, RULE_groupByClause = 30, RULE_orderByClause = 31, 
		RULE_insertStatement = 32, RULE_valueContent = 33, RULE_updateStatement = 34, 
		RULE_updateContentOptional = 35, RULE_deleteStatement = 36, RULE_selectColumnMulp = 37, 
		RULE_selectColumnName = 38, RULE_selectColumnAlias = 39, RULE_columnNameMultp = 40, 
		RULE_columnName = 41, RULE_columnAlias = 42, RULE_tableName = 43, RULE_variableId = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "dmlStatement", "number", "selectStatement", "functionExpr", 
			"functions", "maxFunc", "minFunc", "sumFunc", "avgFunc", "countFunc", 
			"countFuncExpr", "distinctExpr", "conditionExpr", "tableExpr", "tableMultp", 
			"subQuery", "tableAlias", "filterCondition", "logicOp", "compareExpr", 
			"indistinctClause", "valueClause", "rangeExpr", "opExpr", "allClause", 
			"anyClause", "existsClause", "notExistsClause", "whereClause", "groupByClause", 
			"orderByClause", "insertStatement", "valueContent", "updateStatement", 
			"updateContentOptional", "deleteStatement", "selectColumnMulp", "selectColumnName", 
			"selectColumnAlias", "columnNameMultp", "columnName", "columnAlias", 
			"tableName", "variableId"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'1'", "'?'", "'ADD'", "'ALL'", "'ALTER'", "'ALWAYS'", "'ANALYZE'", 
			"'AND'", "'ANY'", "'AS'", "'ASC'", "'AUTO_INCREMENT'", "'BEFORE'", "'BETWEEN'", 
			"'BOTH'", "'BTREE'", "'BY'", "'CALL'", "'CASCADE'", "'CASE'", "'CAST'", 
			"'CHANGE'", "'CHARACTER'", "'CHECK'", "'COLLATE'", "'COLUMN'", "'CONDITION'", 
			"'CONSTRAINT'", "'CONTINUE'", "'CONVERT'", "'CREATE'", "'CROSS'", "'CURRENT_USER'", 
			"'CURSOR'", "'DATABASE'", "'DATABASES'", "'DECLARE'", "'DEFAULT'", "'DELAYED'", 
			"'DELETE'", "'DESC'", "'DESCRIBE'", "'DETERMINISTIC'", "'DISTINCT'", 
			"'DISTINCTROW'", "'DROP'", "'EACH'", "'ELSE'", "'ELSEIF'", "'ENCLOSED'", 
			"'ESCAPED'", "'EXISTS'", "'EXIT'", "'EXPLAIN'", "'FALSE'", "'FETCH'", 
			"'FOR'", "'FORCE'", "'FOREIGN'", "'FROM'", "'FULLTEXT'", "'GENERATED'", 
			"'GRANT'", "'GROUP'", "'HAVING'", "'HIGH_PRIORITY'", "'IF'", "'IGNORE'", 
			"'IN'", "'INDEX'", "'INFILE'", "'INNER'", "'INOUT'", "'INSERT'", "'INTERVAL'", 
			"'INTO'", "'IS'", "'ITERATE'", "'JOIN'", "'KEY'", "'KEYS'", "'KILL'", 
			"'LEADING'", "'LEAVE'", "'LEFT'", "'LIKE'", "'LIMIT'", "'LINEAR'", "'LINES'", 
			"'LOAD'", "'LOCK'", "'LOOP'", "'LOW_PRIORITY'", "'MASTER_BIND'", "'MASTER_SSL_VERIFY_SERVER_CERT'", 
			"'MATCH'", "'MAXVALUE'", "'MODIFIES'", "'NATURAL'", "'NOT'", "'NULL'", 
			"'ON'", "'OPTIMIZE'", "'OPTION'", "'OPTIONALLY'", "'OR'", "'ORDER'", 
			"'OUT'", "'OUTER'", "'OUTFILE'", "'PARTITION'", "'PRIMARY'", "'PROCEDURE'", 
			"'PURGE'", "'RANGE'", "'READ'", "'READS'", "'REFERENCES'", "'REGEXP'", 
			"'RELEASE'", "'RENAME'", "'REPEAT'", "'REPLACE'", "'REQUIRE'", "'RESTRICT'", 
			"'RETURN'", "'REVOKE'", "'RIGHT'", "'RLIKE'", "'SCHEMA'", "'SCHEMAS'", 
			"'SELECT'", "'SET'", "'SEPARATOR'", "'SHOW'", "'SPATIAL'", "'SQL'", "'TABLE'", 
			"'TERMINATED'", "'THEN'", "'TO'", "'TRAILING'", "'TRIGGER'", "'TRUE'", 
			"'TRUNCATE'", "'UNDO'", "'UNION'", "'UNIQUE'", "'UNLOCK'", "'UNSIGNED'", 
			"'UPDATE'", "'USAGE'", "'USE'", "'USING'", "'VALUES'", "'WHEN'", "'WHERE'", 
			"'WHILE'", "'WITH'", "'WRITE'", "'XOR'", "'ZEROFILL'", "'MAX'", "'MIN'", 
			"'COUNT'", "'SUM'", "'AVG'", "'%'", "'_'", "'TINYINT'", "'SMALLINT'", 
			"'MEDIUMINT'", "'INT'", "'INTEGER'", "'BIGINT'", "'REAL'", "'DOUBLE'", 
			"'PRECISION'", "'FLOAT'", "'DECIMAL'", "'DEC'", "'NUMERIC'", "'DATE'", 
			"'TIME'", "'TIMESTAMP'", "'DATETIME'", "'YEAR'", "'CHAR'", "'VARCHAR'", 
			"'NVARCHAR'", "'NATIONAL'", "'BINARY'", "'VARBINARY'", "'TINYBLOB'", 
			"'BLOB'", "'MEDIUMBLOB'", "'LONGBLOB'", "'TINYTEXT'", "'TEXT'", "'MEDIUMTEXT'", 
			"'LONGTEXT'", "'ENUM'", "'VARYING'", "'SERIAL'", "'='", "'>'", "'<'", 
			null, "'>='", "'<='", "','", "'''", "'`'", "'.'", "'('", "')'", "'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "ADD", "ALL", "ALTER", "ALWAYS", "ANALYZE", "AND", 
			"ANY", "AS", "ASC", "AUTO_INCREMENT", "BEFORE", "BETWEEN", "BOTH", "BTREE", 
			"BY", "CALL", "CASCADE", "CASE", "CAST", "CHANGE", "CHARACTER", "CHECK", 
			"COLLATE", "COLUMN", "CONDITION", "CONSTRAINT", "CONTINUE", "CONVERT", 
			"CREATE", "CROSS", "CURRENT_USER", "CURSOR", "DATABASE", "DATABASES", 
			"DECLARE", "DEFAULT", "DELAYED", "DELETE", "DESC", "DESCRIBE", "DETERMINISTIC", 
			"DISTINCT", "DISTINCTROW", "DROP", "EACH", "ELSE", "ELSEIF", "ENCLOSED", 
			"ESCAPED", "EXISTS", "EXIT", "EXPLAIN", "FALSE", "FETCH", "FOR", "FORCE", 
			"FOREIGN", "FROM", "FULLTEXT", "GENERATED", "GRANT", "GROUP", "HAVING", 
			"HIGH_PRIORITY", "IF", "IGNORE", "IN", "INDEX", "INFILE", "INNER", "INOUT", 
			"INSERT", "INTERVAL", "INTO", "IS", "ITERATE", "JOIN", "KEY", "KEYS", 
			"KILL", "LEADING", "LEAVE", "LEFT", "LIKE", "LIMIT", "LINEAR", "LINES", 
			"LOAD", "LOCK", "LOOP", "LOW_PRIORITY", "MASTER_BIND", "MASTER_SSL_VERIFY_SERVER_CERT", 
			"MATCH", "MAXVALUE", "MODIFIES", "NATURAL", "NOT", "NULL", "ON", "OPTIMIZE", 
			"OPTION", "OPTIONALLY", "OR", "ORDER", "OUT", "OUTER", "OUTFILE", "PARTITION", 
			"PRIMARY", "PROCEDURE", "PURGE", "RANGE", "READ", "READS", "REFERENCES", 
			"REGEXP", "RELEASE", "RENAME", "REPEAT", "REPLACE", "REQUIRE", "RESTRICT", 
			"RETURN", "REVOKE", "RIGHT", "RLIKE", "SCHEMA", "SCHEMAS", "SELECT", 
			"SET", "SEPARATOR", "SHOW", "SPATIAL", "SQL", "TABLE", "TERMINATED", 
			"THEN", "TO", "TRAILING", "TRIGGER", "TRUE", "TRUNCATE", "UNDO", "UNION", 
			"UNIQUE", "UNLOCK", "UNSIGNED", "UPDATE", "USAGE", "USE", "USING", "VALUES", 
			"WHEN", "WHERE", "WHILE", "WITH", "WRITE", "XOR", "ZEROFILL", "MAX", 
			"MIN", "COUNT", "SUM", "AVG", "PERCENT", "UNDER_LINE", "TINYINT", "SMALLINT", 
			"MEDIUMINT", "INT", "INTEGER", "BIGINT", "REAL", "DOUBLE", "PRECISION", 
			"FLOAT", "DECIMAL", "DEC", "NUMERIC", "DATE", "TIME", "TIMESTAMP", "DATETIME", 
			"YEAR", "CHAR", "VARCHAR", "NVARCHAR", "NATIONAL", "BINARY", "VARBINARY", 
			"TINYBLOB", "BLOB", "MEDIUMBLOB", "LONGBLOB", "TINYTEXT", "TEXT", "MEDIUMTEXT", 
			"LONGTEXT", "ENUM", "VARYING", "SERIAL", "EQUAL", "GREATER", "LESS", 
			"NEQ", "GREATER_EQUAL", "LESS_EQUAL", "COMMA", "S_QUOTE", "R_QUOTE", 
			"F_STOP", "L_BRACKET", "R_BRACKET", "START", "NUMBER", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DmlLangRule.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DmlLangRuleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DmlLangRuleParser.EOF, 0); }
		public DmlStatementContext dmlStatement() {
			return getRuleContext(DmlStatementContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DmlLangRuleVisitor) return ((DmlLangRuleVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DELETE || _la==INSERT || _la==SELECT || _la==UPDATE) {
				{
				setState(90);
				dmlStatement();
				}
			}

			setState(93);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DmlStatementContext extends ParserRuleContext {
		public SelectStatementContext selectStatement() {
			return getRuleContext(SelectStatementContext.class,0);
		}
		public InsertStatementContext insertStatement() {
			return getRuleContext(InsertStatementContext.class,0);
		}
		public UpdateStatementContext updateStatement() {
			return getRuleContext(UpdateStatementContext.class,0);
		}
		public DeleteStatementContext deleteStatement() {
			return getRuleContext(DeleteStatementContext.class,0);
		}
		public DmlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dmlStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DmlLangRuleVisitor ) return ((DmlLangRuleVisitor<? extends T>)visitor).visitDmlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DmlStatementContext dmlStatement() throws RecognitionException {
		DmlStatementContext _localctx = new DmlStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dmlStatement);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SELECT:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				selectStatement();
				}
				break;
			case INSERT:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				insertStatement();
				}
				break;
			case UPDATE:
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				updateStatement();
				}
				break;
			case DELETE:
				enterOuterAlt(_localctx, 4);
				{
				setState(98);
				deleteStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public List<TerminalNode> NUMBER() { return getTokens(DmlLangRuleParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(DmlLangRuleParser.NUMBER, i);
		}
		public List<TerminalNode> S_QUOTE() { return getTokens(DmlLangRuleParser.S_QUOTE); }
		public TerminalNode S_QUOTE(int i) {
			return getToken(DmlLangRuleParser.S_QUOTE, i);
		}
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DmlLangRuleVisitor ) return ((DmlLangRuleVisitor<? extends T>)visitor).visitNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_number);
		int _la;
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBER:
				enterOuterAlt(_localctx, 1);
				{
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(101);
					match(NUMBER);
					}
					}
					setState(104); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NUMBER );
				}
				break;
			case S_QUOTE:
				enterOuterAlt(_localctx, 2);
				{
				setState(109); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(106);
					match(S_QUOTE);
					setState(107);
					match(NUMBER);
					setState(108);
					match(S_QUOTE);
					}
					}
					setState(111); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==S_QUOTE );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectStatementContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(DmlLangRuleParser.SELECT, 0); }
		public TerminalNode FROM() { return getToken(DmlLangRuleParser.FROM, 0); }
		public TableExprContext tableExpr() {
			return getRuleContext(TableExprContext.class,0);
		}
		public TerminalNode START() { return getToken(DmlLangRuleParser.START, 0); }
		public DistinctExprContext distinctExpr() {
			return getRuleContext(DistinctExprContext.class,0);
		}
		public SelectColumnMulpContext selectColumnMulp() {
			return getRuleContext(SelectColumnMulpContext.class,0);
		}
		public FunctionExprContext functionExpr() {
			return getRuleContext(FunctionExprContext.class,0);
		}
		public List<ConditionExprContext> conditionExpr() {
			return getRuleContexts(ConditionExprContext.class);
		}
		public ConditionExprContext conditionExpr(int i) {
			return getRuleContext(ConditionExprContext.class,i);
		}
		public SelectStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DmlLangRuleVisitor ) return ((DmlLangRuleVisitor<? extends T>)visitor).visitSelectStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectStatementContext selectStatement() throws RecognitionException {
		SelectStatementContext _localctx = new SelectStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_selectStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(SELECT);
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case START:
				{
				setState(116);
				match(START);
				}
				break;
			case DISTINCT:
				{
				setState(117);
				distinctExpr();
				}
				break;
			case R_QUOTE:
			case ID:
				{
				setState(118);
				selectColumnMulp();
				}
				break;
			case MAX:
			case MIN:
			case COUNT:
			case SUM:
			case AVG:
				{
				setState(119);
				functionExpr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(122);
			match(FROM);
			setState(123);
			tableExpr();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==GROUP || _la==ORDER || _la==WHERE) {
				{
				{
				setState(124);
				conditionExpr();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionExprContext extends ParserRuleContext {
		public List<FunctionsContext> functions() {
			return getRuleContexts(FunctionsContext.class);
		}
		public FunctionsContext functions(int i) {
			return getRuleContext(FunctionsContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DmlLangRuleParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DmlLangRuleParser.COMMA, i);
		}
		public FunctionExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DmlLangRuleVisitor ) return ((DmlLangRuleVisitor<? extends T>)visitor).visitFunctionExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionExprContext functionExpr() throws RecognitionException {
		FunctionExprContext _localctx = new FunctionExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			functions();
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(131);
				match(COMMA);
				setState(132);
				functions();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionsContext extends ParserRuleContext {
		public MaxFuncContext maxFunc() {
			return getRuleContext(MaxFuncContext.class,0);
		}
		public MinFuncContext minFunc() {
			return getRuleContext(MinFuncContext.class,0);
		}
		public CountFuncContext countFunc() {
			return getRuleContext(CountFuncContext.class,0);
		}
		public SumFuncContext sumFunc() {
			return getRuleContext(SumFuncContext.class,0);
		}
		public AvgFuncContext avgFunc() {
			return getRuleContext(AvgFuncContext.class,0);
		}
		public FunctionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DmlLangRuleVisitor ) return ((DmlLangRuleVisitor<? extends T>)visitor).visitFunctions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionsContext functions() throws RecognitionException {
		FunctionsContext _localctx = new FunctionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functions);
		try {
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MAX:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				maxFunc();
				}
				break;
			case MIN:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				minFunc();
				}
				break;
			case COUNT:
				enterOuterAlt(_localctx, 3);
				{
				setState(140);
				countFunc();
				}
				break;
			case SUM:
				enterOuterAlt(_localctx, 4);
				{
				setState(141);
				sumFunc();
				}
				break;
			case AVG:
				enterOuterAlt(_localctx, 5);
				{
				setState(142);
				avgFunc();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MaxFuncContext extends ParserRuleContext {
		public TerminalNode MAX() { return getToken(DmlLangRuleParser.MAX, 0); }
		public TerminalNode L_BRACKET() { return getToken(DmlLangRuleParser.L_BRACKET, 0); }
		public ColumnNameContext columnName() {
			return getRuleContext(ColumnNameContext.class,0);
		}
		public TerminalNode R_BRACKET() { return getToken(DmlLangRuleParser.R_BRACKET, 0); }
		public MaxFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_maxFunc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DmlLangRuleVisitor ) return ((DmlLangRuleVisitor<? extends T>)visitor).visitMaxFunc(this);
			else return visitor.visitChildren(this);
		}
	}
